replace jcommander with picocli